# sovaia-eam-modeler

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  solina-eam-modeller.html  sovaia-ai_architecture_framework_v5.html  sovaia-eam-v4-adm-mapping.html  sovaia-eam-v7-archimate.html  sovaia-eam-v8-biat.html
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: canvas.py  edit.py  health.py  intake.py  me.py  navigator.py  reference.py  scenario.py  taxonomy.py
backend/app/security/: auth.py
backend/app/services/: license_client.py  license_resolver.py
backend/app/storage/: demo_seed.py  overlay.py
backend/reference/: classic-reference.yaml  core-ai-stack.yaml  features.yaml  layer-schemes.yaml  platform-event-bus.yaml  platform-foundation.yaml  platform-iam.yaml  scenario-flows.yaml  schema.yaml  sovaia-reference.yaml
backend/reference/business-apps/: erp-core.yaml  pm-blm.yaml  portals.yaml
backend/reference/presets/: heim-pflege-ch.yaml
backend/reference/stories/: care-day-in-spitex.yaml  field-service-property-day.yaml  logistics-multimodal-ch-asien.yaml
backend/reference/taxonomy/: application-tree.yaml  business-tree.yaml  cluster-defaults.yaml  data-tree.yaml  governance-compliance-security-tree.yaml  infrastructure-tree.yaml  operations-tree.yaml  schichten.yaml  technology-tree.yaml
backend/reference/verticals/: care.yaml  field-service.yaml  logistics.yaml
backend/tests/: test_canvas.py  test_classic_library.py  test_scenario_gap.py
eam-llm-bridge/: Dockerfile  README.md  pyproject.toml
eam-llm-bridge/app/: config.py  main.py  stub.py
eam-llm-bridge/app/prompts/: classic_seed_system.txt  gap_system.txt  intake_system.txt  refine_description_system.txt
status-sync-agent/: .gitignore  Dockerfile  README.md  pyproject.toml
status-sync-agent/app/: config.py  resolver.py  sources.py  sync.py
status-sync-agent/helm/: Chart.yaml  values.yaml
status-sync-agent/helm/templates/: _helpers.tpl  cronjob.yaml  (+1 more)
(+106 files in other folders)
